# dockerContainerDeployment

./: README.md
repositories/atlas-api/: CHANGELOG.md  README.md  package.json  tsconfig.json
repositories/atlas-api/docs/: architecture.md
repositories/atlas-api/src/: index.ts
repositories/atlas-api/src/lib/: config.ts  (+1 more)
repositories/atlas-api/tests/: health.test.ts
repositories/developer-debug-lab/: README.md
repositories/developer-debug-lab/environment-issues/: missing_dependency.js  missing_env.js  wrong_port_config.py
repositories/developer-debug-lab/node-api/: broken-endpoint.js  fixed-endpoint.js  package.json  server.js
repositories/developer-debug-lab/python-service/: bug_example.py  fixed_example.py
repositories/developer-debug-lab/troubleshooting/: debugging-guide.md  incident-analysis.md
repositories/developer-environment-simulator/: README.md
repositories/harbor-infra/: README.md
repositories/harbor-infra/docs/: runbook.md
repositories/orbit-data-pipeline/: README.md  pyproject.toml
repositories/orbit-data-pipeline/.github/workflows/: ci.yml
repositories/orbit-data-pipeline/docs/adr/: 0001-data-contracts.md
repositories/orbit-data-pipeline/src/orbit_pipeline/: __init__.py  pipeline.py  validators.py
repositories/orbit-data-pipeline/tests/: test_pipeline.py
repositories/platform-support-scenarios/: README.md
repositories/platform-support-scenarios/playbooks/: response-template.md  triage-checklist.md
repositories/stacktrace-doctor/: README.md  app.js  package.json
repositories/support-engineering-playbook/: README.md
(+34 files in other folders)
